--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,17 @@
 title: "Learn2CTF"
-tagline: "MSU Learn2CTF club"
-description: "Our website"
+#tagline: "MSU Learn2CTF club"
+description: ""
 github_username: hacr-lab
 baseurl: "/learn2ctf"
-url: "abcdefg"
+url: ""
 
 plugins:
   - jemoji
   - jekyll-sitemap
   - jekyll-seo-tag
+  - jekyll-remote-theme
+
+remote_theme: itstorque/jekyll-shell-theme
 
 sass:
   style: compressed
