--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: "Learn2CTF"
 #tagline: "MSU Learn2CTF club"
 description: ""
 github_username: hacr-lab
-baseurl: "/learn2ctf"
+baseurl: ""
 url: ""
 
 plugins:
